ElasticQueryService 모듈 추가